Fix to align company name middle and add margin right to the logo

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -237,9 +237,9 @@ pre {
 		}
 	}
 	&.companyname {
-		margin-left: -4px;
+		// margin-left: -4px; FIX final template checks
 		max-width: 70%;
-		vertical-align: bottom;
+		vertical-align: middle; // FIX final template checks
 		@media @mobile {
 			margin-left: 0;
 			max-width: 100%;
